# tagcgi

./: COPYRIGHT  Makefile.am  README.md  autogen.sh  configure.in  democgi.dsw
docs/: cgi-tag  tag-schema
htdocs/: ca_conf.html  index.html  main.html  result.html
htdocs/CGI/: ca_conf.lst  ca_menu.lst  cn_type.lst  demo_menu.lst  main_menu.lst  mdgst_algo.lst  pkey_bits.lst  pkey_type.lst  service_config.lst
include/: Makefile.am  Makefile.in  argcv.h  cgi_tag.h  getline.h  list.h  proto.h  vector.h
include/win32/: dirent.h
lib/: Makefile.am  Makefile.in
lib/cmn/: Makefile.am  Makefile.in  argcv.c  autoconf.h  base64.c  base64.h  cmn.dsp  crc.c  crc.h  dns.c  dns.h  getline.c  getopt.c  getopt.h  getopt1.c  hash.c  hash.h  hmac.c  hmac.h  isaac.c  isaac.h  md5.c  md5.h  mime.c  rbtree.c  rbtree.h  regex.c  regex.h  sha1.c  sha1.h  url.c  url.h  vector.c
lib/gcgi/: Makefile.am  Makefile.in  code.c  common.c  crlfstringbuf.c  crlfstringbuf.h  gcgi.c  gcgi.dsp  gcgi.h  gcgi_private.h  mime.c  misc.c  parse.c  tag.c
src/: Makefile.am  Makefile.in
src/democgi/: Makefile.am  Makefile.in  democgi.c  democgi.dsp  democgi.h
