
AC_PREREQ(2.57)
AC_INIT(dot1x, 0.1.0, eps@soliton.com.cn, dot1x)
AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE
AM_CONFIG_HEADER(config.h)
#AC_PREFIX_DEFAULT(/usr/local)

AC_ARG_WITH(epscgi,
[  --with-epscgi=DIR       installing eps cgi-bin/htdocs to DIR],
[epsdir=$withval],[epsdir=/share/eps])
cgibindir='$(epsdir)/cgi-bin'
cgicfgdir='$(epsdir)/htdocs/CGI'
htdocsdir='$(epsdir)/htdocs'
imagesdir='$(epsdir)/htdocs/images'
AC_SUBST(epsdir)
AC_SUBST(cgibindir)
AC_SUBST(cgicfgdir)
AC_SUBST(htdocsdir)
AC_SUBST(imagesdir)
AC_DEFINE_UNQUOTED(CONFIG_EPSDIR, "$epsdir", [Define to default cgi installation.])

# Macros defined by ourselves
AC_DEFUN([AC_CC_MS_EXTENSIONS],
[
  AC_REQUIRE([AC_PROG_CC])
  if test "x$GCC" = xyes; then
    if $CC --version | grep '3\.3' > /dev/null; then
      CFLAGS="$CFLAGS -fms-extensions"
    fi
  fi 
])

AC_DEFUN([AC_CC_WALL],
[
  AC_REQUIRE([AC_PROG_CC])
  CFLAGS="$CFLAGS -Wall"
])

AC_ARG_ENABLE(debug,
[  --enable-debug          enable debuging],
[case "${enableval}" in
  yes)
    CFLAGS="$CFLAGS -g"
    CXXFLAGS="$CXXFLAGS -g"
    ndebug=no
    ;;
  no)
    ndebug=yes
    ;;
  *) AC_MSG_ERROR(bad value ${enableval} for --enable-debug) ;;
esac])
if test "x$ndebug" != xno; then
  AC_DEFINE(NDEBUG, 1, [Define to 1 to enable jam mode])
fi

AC_SUBST(CFLAGS)
# Newer automakes demand CCAS and CCASFLAGS.
: ${CCAS='$(CC)'}
: ${CCASFLAGS='-o'}
AC_SUBST(CCAS)
AC_SUBST(CCASFLAGS)
AC_CC_MS_EXTENSIONS

# dealing with cross compiling
AC_ARG_WITH(cross,
[  --with-cross=FILE       using cross compiler configuration in FILE],
[source ${withval}])

AC_ARG_WITH(openldap,
[  --with-openldap=DIR     using openldap includes/libraries in DIR],
[OPENLDAP=${withval}])
AC_SUBST(OPENLDAP)

AC_ARG_WITH(openssl,
[  --with-openssl=DIR      using openssl includes/libraries in DIR],
[OPENSSL=${withval}])
AC_SUBST(OPENSSL)

# Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB
AC_PROG_MAKE_SET
AC_PROG_LN_S

AC_CHECK_TOOL(AS, as)
AC_SUBST(AS)

AC_ARG_ENABLE(wall,
[  --enable-wall           enable all warnings],
[AC_CC_WALL],[])

# Checks for libraries.

# Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_TIME
AC_HEADER_STAT
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([dirent.h stddef.h malloc.h sys/timeb.h arpa/inet.h fcntl.h limits.h netdb.h netinet/in.h syslog.h utime.h stdlib.h string.h sys/ioctl.h sys/socket.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_BIGENDIAN
AC_C_VOLATILE
AC_C_INLINE
AC_STRUCT_TM
AC_TYPE_PID_T

# Checks for library functions.
AC_FUNC_MEMCMP
AC_FUNC_MKTIME
AC_FUNC_FORK
AC_FUNC_UTIME_NULL
AC_FUNC_STAT
AC_FUNC_STRFTIME
AC_FUNC_VPRINTF
AC_FUNC_FNMATCH
AC_CHECK_FUNCS([inet_aton snprintf vsnprintf atexit strerror strstr strrchr inet_ntoa gethostbyname gethostbyaddr strcasecmp strchr strdup getcwd uname utime ftime mkdir gettimeofday memset putenv setenv select socket tzset])

AC_TYPE_SIGNAL
AC_TYPE_SIZE_T
AC_TYPE_OFF_T

#AC_REPLACE_FNMATCH

AC_CONFIG_FILES([Makefile
                 include/Makefile
                 lib/Makefile
                 lib/gcgi/Makefile
		 lib/cmn/Makefile
		 src/Makefile
		 src/democgi/Makefile])
AC_OUTPUT
