noinst_LIBRARIES = libcgi.a
libcgi_a_LIBADD =
libcgi_a_SOURCES = \
	tag.c \
	gcgi.c gcgi.h gcgi_private.h \
	code.c misc.c \
	crypt.c crypt.h \
	mime.c mime.h \
	common.c common.h \
	parse.c parse.h \
	crlfstringbuf.c crlfstringbuf.h
INCLUDES = \
	-I$(top_srcdir)/include -I.
EXTRA_DIST = \
	gcgi.dsp
